# docs/swagger.json
@@ -103,7 +103,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/film.FilmSources"
+                                "$ref": "#/definitions/film.FilmSourcesEncrypted"
                             }
                         }
                     }
@@ -137,6 +137,41 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/show.ShowSearch"
+                        }
+                    }
+                }
+            }
+        },
+        "/shows/vip/seasons": {
+            "get": {
+                "description": "Fetch show seasons and episodes by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shows"
+                ],
+                "summary": "Fetch show seasons and episodes",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search Query",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/show.ShowSeason"
+                            }
                         }
                     }
                 }
@@ -228,7 +263,7 @@
                 }
             }
         },
-        "film.FilmSources": {
+        "film.FilmSourcesEncrypted": {
             "type": "object",
             "properties": {
                 "server": {
@@ -240,21 +275,7 @@
                 "tracks": {
                     "type": "array",
                     "items": {
-                        "type": "object",
-                        "properties": {
-                            "default": {
-                                "type": "boolean"
-                            },
-                            "file": {
-                                "type": "string"
-                            },
-                            "kind": {
-                                "type": "string"
-                            },
-                            "label": {
-                                "type": "string"
-                            }
-                        }
+                        "$ref": "#/definitions/film.Track"
                     }
                 }
             }
@@ -264,7 +285,8 @@
             "type": "object",
             "properties": {
                 "idNum": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "name": {
                     "type": "string",
@@ -276,12 +298,41 @@
                 }
             }
         },
+        "film.Track": {
+            "type": "object",
+            "properties": {
+                "default": {
+                    "type": "boolean"
+                },
+                "file": {
+                    "type": "string"
+                },
+                "kind": {
+                    "type": "string"
+                },
+                "label": {
+                    "type": "string"
+                }
+            }
+        },
+        "show.Episode": {
+            "type": "object",
+            "properties": {
+                "episodeID": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "show.IdSplit": {
             "description": "stores the show ID parts",
             "type": "object",
             "properties": {
                 "idNum": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "name": {
                     "type": "string",
@@ -363,6 +414,23 @@
                 "title": {
                     "type": "string",
                     "example": "Show"
+                }
+            }
+        },
+        "show.ShowSeason": {
+            "type": "object",
+            "properties": {
+                "episodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/show.Episode"
+                    }
+                },
+                "serverID": {
+                    "type": "string"
+                },
+                "serverName": {
+                    "type": "string"
                 }
             }
         }
